Extended ComplexPoint class

--- a/src/Fractalizer.Fractals/Fractalizer.Fractals.csproj
+++ b/src/Fractalizer.Fractals/Fractalizer.Fractals.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IFractal.cs" />
+    <Compile Include="Julia.cs" />
     <Compile Include="Mandelbrot.cs" />
+    <Compile Include="Newton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
