--- a/src/Fractalizer.Common/Fractalizer.Common.csproj
+++ b/src/Fractalizer.Common/Fractalizer.Common.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorsManager.cs" />
     <Compile Include="ComplexPoint.cs" />
     <Compile Include="Contracts\IComplexPoint.cs" />
     <Compile Include="FormConstants.cs" />
