--- a/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
+++ b/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2060AA1B-D7A0-46DA-8851-894428B9778E}</ProjectGuid>
+    <ProjectGuid>{EAB6AE3D-32E2-4063-9904-8D3CA1D3CDC0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Fractalizer.Fractals</RootNamespace>
-    <AssemblyName>Fractalizer.Fractals</AssemblyName>
+    <RootNamespace>Fractalizer.Strategies</RootNamespace>
+    <AssemblyName>Fractalizer.Strategies</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,22 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\Fractal.cs" />
-    <Compile Include="Julia.cs" />
-    <Compile Include="Mandelbrot.cs" />
-    <Compile Include="Newton.cs" />
+    <Compile Include="Contracts\IFractalStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Fractalizer.Common\Fractalizer.Common.csproj">
-      <Project>{5ca73258-bc5e-4545-8ce1-2f0b934751c2}</Project>
-      <Name>Fractalizer.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Fractalizer.Strategies\Fractalizer.Strategies.csproj">
-      <Project>{eab6ae3d-32e2-4063-9904-8d3ca1d3cdc0}</Project>
-      <Name>Fractalizer.Strategies</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
