Working on implementing different complex numbers for Julia Set

--- a/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
+++ b/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IFractalStrategy.cs" />
+    <Compile Include="Contracts\IJuliaComplexNumberStrategy.cs" />
+    <Compile Include="JuliaComplexNumberStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
