Implemented basic functionality for choosing complex point for Julia Set

--- a/src/Fractalizer.Core/Fractalizer.Core.csproj
+++ b/src/Fractalizer.Core/Fractalizer.Core.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ICustomSettingsPanel.cs" />
     <Compile Include="Contracts\IRenderer.cs" />
     <Compile Include="Controls\JuliaSettingsPanel.cs">
       <SubType>UserControl</SubType>
