--- a/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
+++ b/src/Fractalizer.Strategies/Fractalizer.Strategies.csproj
@@ -32,6 +32,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\Fractalizer.Core\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,18 +45,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IFractalStrategy.cs" />
-    <Compile Include="Contracts\INewtonEquationStategy.cs" />
-    <Compile Include="Newton3DegreeStrategy_0Z.cs" />
+    <Compile Include="Contracts\INewtonEquationStrategy.cs" />
+    <Compile Include="Contracts\IStrategiesManager.cs" />
     <Compile Include="Newton3DegreeStrategy_2Z.cs" />
     <Compile Include="Newton3DegreeStrategy.cs" />
     <Compile Include="Newton6DegreeStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StrategiesManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Fractalizer.Common\Fractalizer.Common.csproj">
       <Project>{5ca73258-bc5e-4545-8ce1-2f0b934751c2}</Project>
       <Name>Fractalizer.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
