--- a/src/Fractalizer.Common/Fractalizer.Common.csproj
+++ b/src/Fractalizer.Common/Fractalizer.Common.csproj
@@ -42,9 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorsManager.cs" />
-    <Compile Include="ColorUtility.cs" />
+    <Compile Include="ColorManager.cs" />
     <Compile Include="ComplexPoint.cs" />
+    <Compile Include="Contracts\IColorManager.cs" />
     <Compile Include="Contracts\IComplexPoint.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
